--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,7 +6,7 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Stephanie I. Anderson"
+title = "Diana N. Fontaine"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
@@ -14,7 +14,7 @@ baseurl = "https://sianderson.github.io/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; Stephanie I. Anderson {year}"
+copyright = "&copy; Diana N. Fontaine {2021}"
 
 ############################
 ## Advanced options below ##
@@ -101,3 +101,5 @@ disableAliases = true  # Disable aliases when `redirects` is added to the `outpu
     path = "github.com/wowchemy/wowchemy-hugo-modules/netlify-cms-academic"
   [[module.imports]]
     path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy"
+[security.funcs]
+getenv = [ "^HUGO_", "^WC_" ]
