--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -88,15 +88,15 @@ show_related = {book = true, page = false, post = true, project = true, publicat
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "siander@mit.edu"
+email = "fontained@uri.edu"
 #phone = "888 888 88 88"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "Green Bldg", city = "Cambridge", region = "MA", postcode = "02142", country = "United States", country_code = "US"}
+address = {street = "215 S Ferry Road", city = "Narragansett", region = "RI", postcode = "02882", country = "United States", country_code = "US"}
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-coordinates = {latitude = "42.3604792261367", longitude = "-71.08933089526391"}
+#coordinates = {latitude = "41.492377152294246", longitude = "-71.42252234658224"}
 
 # Directions for visitors to locate you.
 #directions = "Enter Building 1 and take the stairs to Office 200 on Floor 2"
@@ -111,7 +111,7 @@ coordinates = {latitude = "42.3604792261367", longitude = "-71.08933089526391"}
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "github", icon_pack = "fab", name = "Join me on GitHub", link = "https://github.com/sianderson"}
+  #{icon = "github", icon_pack = "fab", name = "Join me on GitHub", link = "https://github.com/sianderson"}
   #{icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
   #{icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
   #{icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
